# ionization

./: .gitignore  README.md  environment.yaml  pyproject.toml
01_src/ionprofile/: __init__.py
01_src/ionprofile/io/: __init__.py  mol2_parser.py  pdb_parser.py  reader.py  sdf_parser.py  smiles_parser.py
01_src/ionprofile/profiling/: __init__.py  engine.py  ionizer.py  rdkit_utils.py
01_src/ionprofile/profiling/engines/: base.py  dimorphite_engine.py  openbabel_engine.py  qupkake_engine.py
01_src/ionprofile/reporting/: __init__.py  csv_report.py  excel_report.py  json_report.py  sdf_report.py
02_scripts/: run_profiling.py
03_configs/: profiling.yaml
04_data/molecules/: Conformer3D_COMPOUND_CID_5281613.sdf  Conformer3D_COMPOUND_CID_73835652.sdf  HTS1710-00236567-01.sdf  HTS1710-00277847-01.sdf  HTS1710-00300511-01.sdf  HTS1710-00479442-01.sdf  HTS1710-00526357-01.sdf  HTS1710-00768749-01.sdf  HTS1710-00848865-01.sdf  HTS1710-00859616-01.sdf  HTS1710-00872988-01.sdf  HTS1710-01057672-01.sdf  HTS1710-01164316-01.sdf  HTS1710-01245478-01.sdf  HTS1710-01254344-01.sdf  HTS1710-01267065-01.sdf  HTS1710-01271450-01.sdf  HTS1710-01274922-01.sdf  HTS1710-01930488-01.sdf  HTS1710-01935385-01.sdf  HTS1710-01997841-01.sdf  HTS1710-02445892-01.sdf  HTS1710-02663578-01.sdf  HTS1710-03595626-01.sdf  HTS1710-04760620-01.sdf  HTS1710-04762166-01.sdf  HTS1710-04762224-01.sdf  HTS1710-05305507-01.sdf  HTS1710-05420874-01.sdf  HTS1710-05435731-01.sdf
06_tests/: ___init__.py
